# MediaPlayer

./: CMakeLists.txt  a.flv  compile_commands.json  main.cc  player.cc  player.h  项目结构图.md
